--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
+    "better-scroll": "^1.13.2",
     "core-js": "^3.8.3",
     "swiper": "^6.0.0",
     "vue": "^2.6.14",
